# kubectl

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
kubectl/: client.py  config.py  decorators.py  handlers.py  helpers.py  models.py  payload.py  utils.py
scripts/: killport.sh
templates/: Dockerfile  nginx.conf
